# zephyr

./: MAINTAINERS.yml  west.yml  zephyr_run.sh
drivers/: temp.txt
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.uc81xx  display_gc9x01x.c  display_ili9xxx.c  display_sdl.c  display_sdl_bottom.c  ili9341_driver.c  ssd16xx.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.secureiot  Kconfig.shakti  flash_secureiot.c  flash_shakti.c  flash_shakti.h
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.mindgrove  Kconfig.seciot  gpio_mindgrove.c  gpio_mindgrove.h  gpio_seciot.c  gpio_seciot.h
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.mindgrove  i2c_mindgrove.c
drivers/interrupt_controller/: CMakeLists.txt  Kconfig  Kconfig.mindgrove  Kconfig.mindgrove_plic  Kconfig.multilevel  Kconfig.plic  Kconfig.shakti_plic  intc_mindgrove_plic.c  intc_shakti_plic.c
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.mindgrove  Kconfig.seciot  pwm_mindgrove.c  pwm_mindgrove.h  pwm_seciot.c  pwm_shakti.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.mindgrove  Kconfig.shakti  uart_mindgrove.c  uart_shakti.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.mindgrove  Kconfig.seciot  spi_mindgrove.c  spi_mindgrove.h  spi_seciot.c  spi_seciot.h  spi_shakti.c  spi_shakti.h
drivers/watchdog/: CMakeLists.txt  Kconfig  Kconfig.mindgrove  Kconfig.seciot  wdt_mindgrove.c  wdt_seciot.c
include/zephyr/: irq.h
kernel/: init.c  sched.c  smp.c
modules/: Kconfig
samples/flash_qspi/: CMakeLists.txt  linker_secure-iot.ld  prj.conf  sample.yaml
samples/flash_qspi/src/: main.c
(+165 files in other folders)
